tests/logical/logical.exp
logical.js:8
  8:     return x && '123';
                ^ boolean. This type is incompatible with
  6: function logical1a(): number { // expected `: boolean`
                           ^^^^^^ number

logical.js:23
 23:     return false && '123';
                ^^^^^ boolean. This type is incompatible with
 22: function logical2a(): number { // expected `: boolean`
                           ^^^^^^ number

logical.js:101
101:     return x != null && x > 10;
                ^^^^^^^^^ boolean. This type is incompatible with
 99: function logical3a(): string { // expected `: boolean`
                           ^^^^^^ string

logical.js:101
101:     return x != null && x > 10;
                             ^^^^^^ boolean. This type is incompatible with
 99: function logical3a(): string { // expected `: boolean`
                           ^^^^^^ string

logical.js:109
109:     return x != null && x;
                ^^^^^^^^^ boolean. This type is incompatible with
107: function logical3b(): number { // expected `: boolean | number`
                           ^^^^^^ number

logical.js:117
117:     return x != undefined && x;
                ^^^^^^^^^^^^^^ boolean. This type is incompatible with
115: function logical3c(): ?number { // expected `: boolean | ?number`
                            ^^^^^^ number

logical.js:124
124:     return x && '123';
                ^ boolean. This type is incompatible with
123: function logical4(x: boolean): string { // expected `: boolean | string`
                                    ^^^^^^ string

logical.js:148
148:     return x || 0;
                ^ boolean. This type is incompatible with
146: function logical5c(): string { // expected `: boolean`
                           ^^^^^^ string

logical.js:176
176:     return true || '123';
                ^^^^ boolean. This type is incompatible with
175: function logical6d(): number { // expected `: boolean`
                           ^^^^^^ number

logical.js:281
281:     return x || (1 && 'foo');
                ^ boolean. This type is incompatible with
279: function logical8f(): string { // expected `: boolean`
                           ^^^^^^ string

logical.js:291
291:     return x || y || false;
                          ^^^^^ boolean. This type is incompatible with
290: ): number | string { // expected `: number | string | boolean`
        ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
  290: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Error:
  291:     return x || y || false;
                            ^^^^^ boolean. This type is incompatible with
  290: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Member 2:
  290: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string
  Error:
  291:     return x || y || false;
                            ^^^^^ boolean. This type is incompatible with
  290: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string

logical.js:315
315:     return x && y && false;
                          ^^^^^ boolean. This type is incompatible with
314: ): number | string { // expected `: number | string | boolean`
        ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
  314: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Error:
  315:     return x && y && false;
                            ^^^^^ boolean. This type is incompatible with
  314: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Member 2:
  314: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string
  Error:
  315:     return x && y && false;
                            ^^^^^ boolean. This type is incompatible with
  314: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string

logical.js:322
322:     return false && x && y;
                ^^^^^^^^^^ boolean. This type is incompatible with
321: function logical10b(x: number, y: string): Array<any> { // expected `: boolean`
                                                ^^^^^^^^^^ array type

logical.js:329
329:     return x && false && y;
                ^^^^^^^^^^ boolean. This type is incompatible with
328: function logical10c(x: number, y: string): Array<any> { // expected `number | boolean`
                                                ^^^^^^^^^^ array type

logical.js:329
329:     return x && false && y;
                ^^^^^^^^^^ number. This type is incompatible with
328: function logical10c(x: number, y: string): Array<any> { // expected `number | boolean`
                                                ^^^^^^^^^^ array type

logical.js:348
348:         y = y || true; // expected a number
                      ^^^^ boolean. This type is incompatible with
346: function logical11b(y: number): number {
                            ^^^^^^ number

logical.js:363
363:     return y;
                ^ boolean. This type is incompatible with
356: function logical12a(): number {
                            ^^^^^^ number

logical.js:371
371:         y = y && true; // expected a number
                      ^^^^ boolean. This type is incompatible with
369: function logical12b(y: number): number {
                            ^^^^^^ number

logical.js:381
381:         {x: x && "bar"},
                 ^ number. This type is incompatible with
379: function logical13(x: number): Array<{x: string}> {
                                              ^^^^^^ string

logical.js:383
383:         {x: true && false},
                         ^^^^^ boolean. This type is incompatible with
379: function logical13(x: number): Array<{x: string}> {
                                              ^^^^^^ string

logical.js:384
384:         {x: false && false},
                 ^^^^^ boolean. This type is incompatible with
379: function logical13(x: number): Array<{x: string}> {
                                              ^^^^^^ string

logical.js:397
397:         {x: x || "bar"},
                 ^ number. This type is incompatible with
395: function logical14(x: number): Array<{x: string}> {
                                              ^^^^^^ string

logical.js:399
399:         {x: false || true},
                          ^^^^ boolean. This type is incompatible with
395: function logical14(x: number): Array<{x: string}> {
                                              ^^^^^^ string

logical.js:400
400:         {x: true || false},
                 ^^^^ boolean. This type is incompatible with
395: function logical14(x: number): Array<{x: string}> {
                                              ^^^^^^ string

logical.js:510
510:   return (x.y && x.z); // error: x.y is a string
               ^^^ string. This type is incompatible with
509: function logical19a(x: { y: string, z: boolean }): boolean {
                                                        ^^^^^^^ boolean

logical.js:513
513:   return (x.y || x.z); // error: x.y is a string
               ^^^ string. This type is incompatible with
512: function logical19b(x: { y: string, z: boolean }): boolean {
                                                        ^^^^^^^ boolean


Found 26 errors
